# riff

./: .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  README.md  bun.lockb  components.json  eslint.config.js  justfile  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml
.husky/: pre-commit
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs  model.rs
src/components/: alert.tsx  editor.tsx  mode-toggle.tsx  settings.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  resizable.tsx  select.tsx  separator.tsx  sonner.tsx  textarea.tsx
src/lib/: types.ts  utils.test.ts  utils.ts
src/styles/: syntax.css
