[package]
name = "riff"
version = "0.0.0"
authors = ["Liam <liam@scalzulli.com>"]
description = "A place to expand ideas"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
thiserror = "1.0.61"
typeshare = "1.0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
